Fix overflow scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -18,13 +18,14 @@ h1, h3 {
     padding: 0;
     height: 100%;
     width: 100%;
-    position:absolute;
+    position:fixed;
     top:0;right:0;bottom:0;left:0;
+    overflow: scroll;
 
-    box-shadow: inset 0px 0px 100px 10px rgba(0,0,0,.2);
-    -webkit-box-shadow: inset 0px 0px 100px 10px rgba(0,0,0,.2);
-    -moz-box-shadow: inset 0px 0px 100px 10px rgba(0,0,0,.2);
-    -o-box-shadow: inset 0px 0px 100px 10px rgba(0,0,0,.2);
+    box-shadow: inset 0 0 100px 10px rgba(0,0,0,.2);
+    -webkit-box-shadow: inset 0 0 100px 10px rgba(0,0,0,.2);
+    -moz-box-shadow: inset 0 0 100px 10px rgba(0,0,0,.2);
+    -o-box-shadow: inset 0 0 100px 10px rgba(0,0,0,.2);
 }
 
 .av{
@@ -131,10 +132,8 @@ h1, h3 {
 }
 
 .sm-container{
-    width:800px;
-    margin: 0 auto;
     text-align: center;
-    margin-bottom: 40px;
+    margin: 0 auto 40px;
 }
 
 .sm-icon{
